--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -7,8 +7,29 @@
 
 
     <script>
+
+
       const myArray = [10,20,30];
+
       console.log(myArray);
+
+      myArray[0] = 99;
+
+      console.log(myArray);
+
+      [1, 'hello', true, {name:'socks'}, [1,2]]
+
+      console.log(Array.isArray([1,2]));
+
+      myArray.push('sima');
+      
+      console.log(myArray);
+
+      myArray.splice(0,1);
+
+      console.log(myArray);
+
+      /*console.log();*/
     </script>
   </body>
 </html>
