todo list with reset

--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -4,8 +4,13 @@
     <title>Todo List</title>
   </head>
   <body>
-    <script>
-      /*console.log();*/
+    <p>Todo list</p>
+    <input class="js-todo-input" type="text" placeholder="Todo name">
+    <button onclick="
+      addTodo();
+    ">Add</button>
+
+    <script src="11-todo-list.js">
     </script>
   </body>
 </html>
