--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -9,7 +9,7 @@
     <script>
 
 
-      const myArray = [10,20,30];
+     /* const myArray = [10,20,30];
 
       console.log(myArray);
 
@@ -29,7 +29,42 @@
 
       console.log(myArray);
 
-      /*console.log();*/
+      console.log();
+      let i=0;
+      while(i<10){
+        console.log(i);
+        i+=1;
+      }
+
+      console.log('now for loop');
+
+      for (let i=0;i<10;i++){
+        console.log(i);
+      }
+      const todoList = [
+        'make dinner',
+        'wash dishes',
+        'watch youtube'
+      ];
+
+      for (let index=0; index<=todoList.length - 1;index++){
+        const value=todoList[index];
+        console.log(value);
+      }*/
+
+      const nums = [1,1,3];
+      const numsd = [];
+
+      for (i=0;i<nums.length;i++){
+        numsd[i]=2*nums[i];
+      }
+
+      console.log(`Array dubled is:${numsd}`);
+
+
+
+
+
     </script>
   </body>
 </html>
