array and loop exer changed

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -5,11 +5,36 @@
   </head>
   <body>
 
-
+    <div class="js-display"></div>
     <script>
+/*
+      const nums = ['sima','marina','manuela']; 
+      console.log(nums);
+      function arraySwap(nums){
+        const first = nums[0];
+        const last = nums[nums.length - 1];
+        const midle = nums.splice(1,nums.length - 2);
+        const numsSwaped=`${last},${midle},${first}`;
+        return numsSwaped;
+      } 
+
+      document.querySelector('.js-display').innerHTML = arraySwap(nums);
 
 
-     /* const myArray = [10,20,30];
+
+     let perTwoa=[];
+     let i=0;      
+      while(i<11){
+        perTwoa.push(i);
+        i+=2;
+      }
+
+      console.log(perTwoa);
+       document.querySelector('.js-display').innerHTML= perTwoa;
+*/
+/* 
+
+     const myArray = [10,20,30];
 
       console.log(myArray);
 
@@ -51,9 +76,29 @@
         const value=todoList[index];
         console.log(value);
       }*/
+      /*
 
-      const nums = [1,1,3];
-      const numsd = [];
+      const nums = [2,4,20,30,67]; 
+      console.log(nums);
+
+      document.querySelector('.js-display').innerHTML = getLast(nums);
+      
+      function getLast(nums){
+        const lastIndex = nums.length - 1;
+        const lastValue = nums[lastIndex];
+       
+        return lastValue;
+      }
+*/
+
+
+  /*    
+
+      nums[lastIndex] = 99;
+
+      console.log(lastIndex);
+
+
 
       for (i=0;i<nums.length;i++){
         numsd[i]=2*nums[i];
@@ -61,7 +106,7 @@
 
       console.log(`Array dubled is:${numsd}`);
 
-
+*/
 
 
 
