todo list objeect added

--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -18,6 +18,7 @@
     </div>
     <p>Todo list</p>
     <input class="js-todo-input" type="text" placeholder="Enter task todo">
+    <input type="date" class="js-todo-date">
     <button onclick="
       addTodo();
     ">Add</button>
