--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -51,7 +51,7 @@
         const value=todoList[index];
         console.log(value);
       }*/
-
+      /*
       const nums = [1,1,3];
       const numsd = [];
 
@@ -60,9 +60,27 @@
       }
 
       console.log(`Array dubled is:${numsd}`);
-
-
-
+      */
+     /*
+      for(i=1;i<=10;i++){
+        if(i%3===0){
+          continue;
+        }
+        console.log(i);
+        if (i===8) {
+          break;
+        }
+      }*/
+      
+      let i=1;
+      while(i<=10){
+        if(i%3===0){
+          i++;
+          continue;
+        } 
+        console.log(i);
+        i++;
+      }
 
 
     </script>
