Auto Play feature

--- a/12-rock-paper-scissos.html
+++ b/12-rock-paper-scissos.html
@@ -27,7 +27,7 @@
       localStorage.removeItem('score'); ">
         Reset Score
       </button>
-      <button class="js-autoplay-button">Auto Play</button>
+      <button class="js-autoplay-button" onclick="autoPlay();">Auto Play</button>
     </div>
     
    <script src="12-rock-paper-scisors.js">
