all done event listenrs to buttons

--- a/12-rock-paper-scissos.html
+++ b/12-rock-paper-scissos.html
@@ -9,25 +9,18 @@
     <h3>Rock Paper Scissors</h3>
     <hr>   
     <div class="button-container">
-      <button onclick="         
-          const result = compare('Rock');  
-        ">Rock</button>
-      <button onclick="         
-          const result1 = compare('Paper');
-      ">Paper</button>
-      <button onclick=" 
-          const result2 = compare('Scissors');
-      ">Scissors</button>
+      <button class="js-rock-button">Rock</button>
+      <button class="js-paper-button">Paper</button>
+      <button class="js-scissors-button">Scissors</button>
       
     <p class="js-moves"></p>
     <p class="js-result"></p>
     <p class="js-score"></p>
 
-    <button class="js-resetscore-button" onclick="score.losses = 0; score.wins = 0; score.ties = 0; uprdateScore();
-      localStorage.removeItem('score'); ">
+    <button class="js-resetscore-button">
         Reset Score
       </button>
-      <button class="js-autoplay-button" onclick="autoPlay();">Auto Play</button>
+      <button class="js-autoplay-button">Auto Play</button>
     </div>
     
    <script src="12-rock-paper-scisors.js">
