--- a/12-todo-list.html
+++ b/12-todo-list.html
@@ -13,7 +13,7 @@
     <div class="grid">
       <input class="js-todo-input" type="text" placeholder="Enter task todo">
       <input type="date" class="js-todo-date">
-      <button class="add-button" onclick="addTodo();">Add</button>
+      <button class="add-button">Add</button>
     </div>
 
       <div class="division"></div>
