--- a/12-advanced-functions.html
+++ b/12-advanced-functions.html
@@ -6,7 +6,7 @@
 <body>
     <button class="js-button">Click</button>
     <script>
-
+/*
         const buttonElement =  document.querySelector('.js-button');
 
         const eventF = ()=>{console.log('click');};
@@ -18,7 +18,7 @@
         buttonElement.addEventListener('click',()=>{
             console.log('click2');
         });
-        /*
+        
         function greeting(){
             console.log('hello');
         }
@@ -86,7 +86,9 @@
         };
        */
 
-
+    [1,-3,5].filter((value,index)=>{
+        return true; 
+    });
     </script>
 </body>
 </html>
